samples/_failures_safe/1761495988_6e64d8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea9cd79d.c: In function ‘main’:
./samples/SAFE/__tmp_ea9cd79d.c:159:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  159 |     int pos
      |     ^~~
./samples/SAFE/__tmp_ea9cd79d.c:159:5: error: expected declaration or statement at end of input
